--- a/.config/leftwm/themes/polybar/template.liquid
+++ b/.config/leftwm/themes/polybar/template.liquid
@@ -1,7 +1,7 @@
 {% for tag in workspace.tags %}
 {% if tag.mine %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{F#000000}%{B#FFB52A}  {{tag.name}}  %{B-}%{F-}
+%{F#000000}%{B#ff2e2e}  {{tag.name}}  %{B-}%{F-}
 %{A}
 {% elsif tag.visible  %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
